@@ -1,3 +1,9 @@
+### Network and Soccer Base 2018 Jul 10 -- Mahi
+
+network server established data will pass over network
+monitor and plotter is ready 
+soccer base is done
+
 ### Implement Basic Structure 2018 Jul 3 -- Mahi
 
 add geom2D
